--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
       const isP1JustFinishedOnLaptop =
         (currentDevice === "laptop") && (linkPhase === 2) && (linkTargetDevice === "phone");
 
-      // Is this a “preparing” screen? (we’re waiting for this same phase)
+      // 👉 Treat “preparing” as: we’re waiting for the same phase we’re linking to
       const isPreparing = (linkPhase === waitPhase);
 
       // Title
@@ -622,45 +622,40 @@
           `Your assigned order is <b>${orderStr}</b>. Please continue on your <b>${linkTargetDevice}</b>.`;
       }
 
-      // “Waiting…” copy
+      // Waiting copy
       waitTxt.textContent = isWrongStartWithP1Link
         ? "Waiting to complete Phase 1 on your other device…"
-        : (isPreparing
-          ? `Preparing Phase ${waitPhase}…`
+        : (isPreparing ? `Preparing Phase ${waitPhase}…`
           : (waitPhase === 2 ? "Waiting for Phase 2 to be ready…" : "Waiting…"));
 
       // Link + copy
       handoffUrl.textContent = link;
+
+      // ✳️ Hide the Copy button on any “preparing” view
+      // (the button’s parent is the small <div> under the code block)
+      const copyWrap = btnCopy.parentElement;
+      copyWrap.classList.toggle("hidden", isPreparing);
+
       btnCopy.onclick = async () => {
         try { await navigator.clipboard.writeText(link); btnCopy.textContent = "Copied!"; }
         catch { }
         setTimeout(() => btnCopy.textContent = "Copy link", 1200);
       };
 
-      // QR visibility rules:
-      // - Show only on *laptop* (phones can open links directly)
-      // - Show only when the link targets the *phone*
-      // - Never on “preparing” views (linkPhase === waitPhase)
-      // QR visibility (laptop -> phone only), and NEVER on “preparing” (linkPhase === waitPhase)
-      const shouldShowQR =
-        currentDevice === "laptop" &&
-        linkTargetDevice === "phone" &&
-        linkPhase !== waitPhase;
+      // ✳️ QR visibility rules:
+      // - Only on *laptop*
+      // - Only when link targets the *phone*
+      // - Never on “preparing” views
+      const shouldShowQR = (currentDevice === "laptop") &&
+        (linkTargetDevice === "phone") &&
+        !isPreparing;
 
       if (shouldShowQR) {
-        // show whole wrapper (img + caption)
-        showEl(qrWrap);
-        // (re)generate QR
+        showEl(qrWrap);                      // show whole QR wrapper (image + caption)
         setTimeout(() => { qrImg.src = qrFor(link); }, 0);
-        // ensure caption text is present
-        const cap = document.getElementById("qrCap");
-        if (cap) cap.textContent = "Scan this QR with your other device’s camera.";
       } else {
-        // fully hide the wrapper so no box/space remains
-        hideEl(qrWrap);
+        hideEl(qrWrap);                      // hide completely so no empty box remains
         qrImg.removeAttribute("src");
-        const cap = document.getElementById("qrCap");
-        if (cap) cap.textContent = "";
       }
 
       // Show handoff card
