Update consent text for clarity on device usage
Expanded consent paragraph to clarify device order and phases.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,15 @@
 
   <section id="s-consent" class="card">
     <h2>Consent</h2>
-    <p>This webpage records timing for 3 test sentences per phase(device). No personal info is collected.</p>
+    <p>
+  After you give consent and choose your age group, the server will randomly assign you
+  a device order — <b>phone→laptop</b> or <b>laptop→phone</b> — independent of which device you’re using right now.
+  If this device isn’t first, we’ll show a link (and a QR on laptops) to open Phase 1 on your other device.
+  When Phase 1 finishes, this tab will automatically load Phase 2. <br><br>
+  If this device <b>is</b> the first one in your assigned order, you’ll begin Phase 1 right here.
+  After completing Phase 1, you’ll receive a link (and QR if on a laptop) to continue Phase 2 on your other device.
+  No personal information is collected.
+</p>
     <label class="center" style="gap:.6rem">
       <input id="agree" type="checkbox" /> I am 18–22 or 40–55 and I consent.
     </label>
