--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
   <section id="s-consent" class="card">
     <h2>Consent</h2>
     <p>
-  After you give consent and choose your age group, the server will randomly assign you
-  a device order — <b>phone→laptop</b> or <b>laptop→phone</b> — independent of which device you’re using right now.
-  If this device isn’t first, we’ll show a link (and a QR on laptops) to open Phase 1 on your other device.
-  When Phase 1 finishes, this tab will automatically load Phase 2. <br><br>
-  If this device <b>is</b> the first one in your assigned order, you’ll begin Phase 1 right here.
-  After completing Phase 1, you’ll receive a link (and QR if on a laptop) to continue Phase 2 on your other device.
-  No personal information is collected.
-</p>
+      After you give consent and choose your age group, the server will randomly assign you
+      a device order — <b>phone→laptop</b> or <b>laptop→phone</b> — independent of which device you’re using right now.
+      If this device isn’t first, we’ll show a link (and a QR on laptops) to open Phase 1 on your other device.
+      When Phase 1 finishes, this tab will automatically load Phase 2. <br><br>
+      If this device <b>is</b> the first one in your assigned order, you’ll begin Phase 1 right here.
+      After completing Phase 1, you’ll receive a link (and QR if on a laptop) to continue Phase 2 on your other device.
+      No personal information is collected.
+    </p>
     <label class="center" style="gap:.6rem">
       <input id="agree" type="checkbox" /> I am 18–22 or 40–55 and I consent.
     </label>
@@ -323,6 +323,7 @@
       localStorage.removeItem("ts_order");
       localStorage.removeItem("ts_wait_phase");
       localStorage.removeItem("ts_handoff_url");
+      clearTok();
       // drop query params so the page reloads clean
       location.replace(location.origin + location.pathname);
     }
@@ -428,59 +429,157 @@
     });
 
     /*** DIRECT PHASE LINKS (from QR/handoff) ***/
+    // window.addEventListener("DOMContentLoaded", async () => {
+    //   const pidQ = q.get("pid"), orderQ = q.get("order"), phaseQ = Number(q.get("phase") || 0);
+    //   // If there is NO pid in the URL, clear any stale local session
+    //   if (!pidQ) {
+    //     localStorage.removeItem("ts_pid");
+    //     localStorage.removeItem("ts_order");
+    //     localStorage.removeItem("ts_wait_phase");
+    //     localStorage.removeItem("ts_handoff_url");
+    //   }
+    //   // If there IS a pid in the URL, it takes precedence over localStorage
+    //   // (this allows reloading the handoff link without breaking)
+    //   if (pidQ && orderQ && (phaseQ === 1 || phaseQ === 2)) {
+    //     pid = pidQ; deviceOrder = orderQ; phase = phaseQ;
+    //     localStorage.setItem("ts_pid", pid);
+    //     localStorage.setItem("ts_order", deviceOrder);
+
+    //     hide(sConsent); show(sHandoff); // brief state so user sees progress
+    //     hideEl(qrWrap);          // hide QR while we’re just “preparing…”
+    //     waitTxt.textContent = `Preparing Phase ${phase}…`;
+    //     // Hide the copy UI on "preparing" views (same-device load)
+    //     if (copyWrap) copyWrap.style.display = "none";
+    //     if (btnCopy) { btnCopy.style.display = "none"; btnCopy.disabled = true; }
+
+    //     // 🔑 Ensure server row exists & fetch authoritative order
+    //     try {
+    //       const r = await participantStart(pid, ""); // idempotent
+    //       if (r && r.session_token) setTok(r.session_token);
+    //       deviceOrder = r.device_order || (r.status && r.status.device_order) || deviceOrder;
+    //       localStorage.setItem("ts_order", deviceOrder);
+    //     } catch (e) { }
+
+    //     // If wrong device, keep handoff; otherwise go into trial
+    //     const dev = getDevice(); const [first, second] = deviceOrder.split("→");
+    //     if ((phase === 1 && dev !== first) || (phase === 2 && dev !== second)) {
+    //       // explicit “wrong device” page instead of the generic handoff card
+    //       showWrongDevice(phase);
+    //     } else {
+    //       gotoTrialWithLoading();
+    //     }
+    //     return;
+    //   }
+
+    //   // If page was refreshed while waiting, resume the handoff view
+    //   const waitPhase = Number(localStorage.getItem("ts_wait_phase") || 0);
+    //   const storedPid = localStorage.getItem("ts_pid");
+    //   const storedOrd = localStorage.getItem("ts_order");
+    //   if (!pidQ && waitPhase && storedPid && storedOrd) {
+    //     pid = storedPid; deviceOrder = storedOrd; phase = waitPhase;
+    //     showHandoff(getDevice(), waitPhase);
+    //     return;
+    //   }
+
+    //   show(sConsent);
+    // });
+
+    // --- Smart resume on refresh anywhere after Start ---
     window.addEventListener("DOMContentLoaded", async () => {
-      const pidQ = q.get("pid"), orderQ = q.get("order"), phaseQ = Number(q.get("phase") || 0);
-      // If there is NO pid in the URL, clear any stale local session
-      if (!pidQ) {
-        localStorage.removeItem("ts_pid");
-        localStorage.removeItem("ts_order");
-        localStorage.removeItem("ts_wait_phase");
-        localStorage.removeItem("ts_handoff_url");
+      // DOM refs you already have
+      const q = new URLSearchParams(location.search);
+
+      // Pull persisted session
+      pid = q.get("pid") || localStorage.getItem("ts_pid") || "";
+      let tok = getTok();
+      deviceOrder = q.get("order") || localStorage.getItem("ts_order") || "";
+      let phaseLS = localStorage.getItem("ts_phase");         // "1" | "2"
+      let pageLS = localStorage.getItem("ts_page");          // "handoff" | "trial" | "consent"
+      let roundLS = localStorage.getItem("ts_roundIdx");      // "-1" (practice) or 0..2
+
+      // Utility from your code (already defined)
+      const isMobile = /Mobi|Android/i.test(navigator.userAgent);
+      const currentDevice = isMobile ? "phone" : "laptop";
+
+      function splitOrder(s) {
+        const [firstDev, secondDev] = (s || "").split("→");
+        return { firstDev, secondDev };
       }
-      // If there IS a pid in the URL, it takes precedence over localStorage
-      // (this allows reloading the handoff link without breaking)
-      if (pidQ && orderQ && (phaseQ === 1 || phaseQ === 2)) {
-        pid = pidQ; deviceOrder = orderQ; phase = phaseQ;
-        localStorage.setItem("ts_pid", pid);
-        localStorage.setItem("ts_order", deviceOrder);
 
-        hide(sConsent); show(sHandoff); // brief state so user sees progress
-        hideEl(qrWrap);          // hide QR while we’re just “preparing…”
-        waitTxt.textContent = `Preparing Phase ${phase}…`;
-        // Hide the copy UI on "preparing" views (same-device load)
-        if (copyWrap) copyWrap.style.display = "none";
-        if (btnCopy) { btnCopy.style.display = "none"; btnCopy.disabled = true; }
+      // If we don’t have a PID+token yet, show consent as usual
+      if (!pid || !tok) {
+        // Clean slate
+        localStorage.removeItem("ts_page");
+        show(sConsent);
+        return;
+      }
 
-        // 🔑 Ensure server row exists & fetch authoritative order
-        try {
-          const r = await participantStart(pid, ""); // idempotent
-          if (r && r.session_token) setTok(r.session_token);
-          deviceOrder = r.device_order || (r.status && r.status.device_order) || deviceOrder;
+      // Try to restore from the server truth
+      try {
+        // getStatus must send token internally (you already updated it when we moved off the shared secret)
+        const st = await getStatus(pid);                  // { completed, device_order, phase1_done, phase2_done, phase_next }
+        if (!st || st.ok === false) throw new Error("status failed");
+
+        // Persist order if server gives it (authoritative)
+        if (st.device_order) {
+          deviceOrder = st.device_order;
           localStorage.setItem("ts_order", deviceOrder);
-        } catch (e) { }
-
-        // If wrong device, keep handoff; otherwise go into trial
-        const dev = getDevice(); const [first, second] = deviceOrder.split("→");
-        if ((phase === 1 && dev !== first) || (phase === 2 && dev !== second)) {
-          // explicit “wrong device” page instead of the generic handoff card
-          showWrongDevice(phase);
-        } else {
-          gotoTrialWithLoading();
         }
-        return;
-      }
+        const { firstDev, secondDev } = splitOrder(deviceOrder || "");
 
-      // If page was refreshed while waiting, resume the handoff view
-      const waitPhase = Number(localStorage.getItem("ts_wait_phase") || 0);
-      const storedPid = localStorage.getItem("ts_pid");
-      const storedOrd = localStorage.getItem("ts_order");
-      if (!pidQ && waitPhase && storedPid && storedOrd) {
-        pid = storedPid; deviceOrder = storedOrd; phase = waitPhase;
-        showHandoff(getDevice(), waitPhase);
-        return;
-      }
+        // If already completed, cycle
+        if (st.completed) { showDoneAndCycle(); return; }
 
-      show(sConsent);
+        // If the user was mid–trial previously, prefer resuming the trial view
+        // (We’ll still check server flags to guard phase consistency.)
+        const preferTrial = (pageLS === "trial");
+
+        // Decide where to land
+        if (!st.phase1_done) {
+          // Phase 1 still pending
+          if (currentDevice === firstDev) {
+            // Resume or start Phase 1 locally
+            phase = 1;
+            // If you persist round index, restore it (optional)
+            if (roundLS !== null) { try { roundIdx = parseInt(roundLS, 10); } catch { } }
+            localStorage.setItem("ts_phase", "1");
+            localStorage.setItem("ts_page", "trial");     // so future refreshes return here
+            gotoTrialWithLoading();
+            return;
+          } else {
+            // Wrong device: hand off to Phase 1 link, wait for Phase 2 here
+            localStorage.setItem("ts_page", "handoff");
+            showHandoff(currentDevice, /*waitPhase*/ 2, /*linkPhase*/ 1);
+            return;
+          }
+        }
+
+        // Phase 1 is done; Phase 2 next
+        if (!st.phase2_done) {
+          if (currentDevice === secondDev) {
+            // Resume or start Phase 2 locally
+            phase = 2;
+            if (preferTrial && roundLS !== null) { try { roundIdx = parseInt(roundLS, 10); } catch { } }
+            localStorage.setItem("ts_phase", "2");
+            localStorage.setItem("ts_page", "trial");
+            gotoTrialWithLoading();
+            return;
+          } else {
+            // Wrong device: hand off to Phase 2 link and wait here
+            localStorage.setItem("ts_page", "handoff");
+            showHandoff(currentDevice, /*waitPhase*/ 2, /*linkPhase*/ 2);
+            return;
+          }
+        }
+
+        // Fallback (shouldn’t hit because st.completed would be true)
+        showDoneAndCycle();
+
+      } catch (e) {
+        // If anything goes wrong, don’t trap the user—show consent to restart cleanly
+        console.warn("Resume failed:", e);
+        show(sConsent);
+      }
     });
 
     /*** TRIAL ***/
@@ -489,6 +588,10 @@
       hide(sConsent); hide(sHandoff); show(sTrial);
       setSpin(true); statusEl.textContent = `Preparing Phase ${phase}…`;
       phaseLabel.textContent = `Phase ${phase} on ${getDevice()}`;
+
+      localStorage.setItem("ts_page", "trial");
+      localStorage.setItem("ts_phase", String(phase));
+      localStorage.setItem("ts_roundIdx", String(roundIdx));      // keep updated as rounds advance
 
       // ⤵️ resume if we crashed/refreshed mid-phase
       loadProgress();
@@ -684,6 +787,8 @@
       const linkTargetDevice = (linkPhase === 1 ? order[0] : order[1]) || "phone";
       const link = handoffLink(pid, orderStr, linkPhase);
 
+      localStorage.setItem("ts_page", "handoff");
+
       // "Preparing" only when this device is the one that will run the linked phase
       const isPreparing = (currentDevice === linkTargetDevice) && (linkPhase === waitPhase);
 
@@ -828,6 +933,7 @@
 
       localStorage.setItem("ts_wait_phase", String(targetPhase));
       localStorage.setItem("ts_handoff_url", link);
+      localStorage.setItem("ts_page", "handoff");
     }
 
     function stopPoll() { if (pollId) { clearInterval(pollId); pollId = null; } }
